--- a/src/Components/Tuesday/Tuesday.module.css
+++ b/src/Components/Tuesday/Tuesday.module.css
@@ -1,3 +1,26 @@
-.Tuesday {
-    background-color:teal;
+.Wrap {
+    background-color: teal;
+}
+
+.todoList {
+    width: 500px;
+    margin: 0 auto;
+}
+
+.todoList > div {
+    padding: 10px;
+}
+
+
+.todoList-task.done {
+    opacity: 0.5;
+}
+
+
+.filter-active {
+    background-color: blue;
+}
+
+.error {
+    border-color: red;
 }
