--- a/src/Components/Tuesday/Todolist/Todolist.module.css
+++ b/src/Components/Tuesday/Todolist/Todolist.module.css
@@ -1,8 +1,6 @@
-.wrap {
-
-}
-
 .todoList {
-    width: 600px;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
     margin: 0 auto;
 }
