--- a/src/Components/Tuesday/TodoListFooter/TodoListFooter.module.css
+++ b/src/Components/Tuesday/TodoListFooter/TodoListFooter.module.css
@@ -1,3 +1,17 @@
 .filterActive {
     background-color: blue;
 }
+
+.wrap_buttons {
+    display: flex;
+    width: 100%;
+    height: 30px;
+}
+
+.wrap_buttons button {
+    width: 28%;
+}
+
+.button__show {
+    width: 16%;
+}
