--- a/src/Components/Tuesday/TodoListHeader/TodoListHeader.module.css
+++ b/src/Components/Tuesday/TodoListHeader/TodoListHeader.module.css
@@ -4,14 +4,25 @@
 }
 
 .todoListHeaderTitle {
-
+    display: flex;
+    justify-content: center;
 }
 
 .todoListNewTaskForm {
-
+    display: flex;
+    width: 100%;
+    height: 30px;
+    margin-bottom: 10px;
 }
-
+.todoListNewTaskForm input {
+    width: 85%;
+}
 .error {
     border-color: red;
+}
+
+
+.add {
+    width: 15%;
 }
 
