--- a/src/Components/Tuesday/TodoListTasks/TodoListTask/TodoListTask.module.css
+++ b/src/Components/Tuesday/TodoListTasks/TodoListTask/TodoListTask.module.css
@@ -1,15 +1,49 @@
 .todoListTask.done {
     opacity: 0.5;
 }
+
 .low {
     color: #ff7c55;
+    width: 60%;
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
+
 .middle {
     color: lightskyblue;
 }
+
 .high {
     color: red;
 }
+
 .wrap_task {
     margin-bottom: 15px;
+}
+
+.input {
+    width: 85%;
+}
+
+.todoListTask {
+    border: 1px solid forestgreen;
+    display: flex;
+    align-items: center;
+    height: 30px;
+    width: 100%;
+}
+
+.select__class {
+    width: 24%;
+    height: 100%;
+}
+
+.delete__task{
+    width: 8%;
+    height: 100%;
+}
+
+.checkbox__class{
+    width: 8%;
 }
