--- a/src/Components/Tuesday/Tuesday.module.css
+++ b/src/Components/Tuesday/Tuesday.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     background-color: teal;
-    width: 80%;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
     padding: 50px 20px;
@@ -10,6 +10,7 @@
 
 .wrap_todolists {
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
     width: 100%;
     height: 100vh;
