--- a/src/Components/Tuesday/TodoListTasks/TodoListTask/TodoListTask.module.css
+++ b/src/Components/Tuesday/TodoListTasks/TodoListTask/TodoListTask.module.css
@@ -12,10 +12,18 @@
 
 .middle {
     color: lightskyblue;
+    width: 60%;
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .high {
     color: red;
+    width: 60%;
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .wrap_task {
