--- a/src/Components/Tuesday/Todolist/Todolist.module.css
+++ b/src/Components/Tuesday/Todolist/Todolist.module.css
@@ -1,3 +1,8 @@
+
+.wrap {
+
+}
+
 .todoList {
     display: flex;
     flex-direction: column;
@@ -11,6 +16,7 @@
     padding: 5px;
 
 }
+
 .button_delete {
     position: absolute;
     top: -2px;
