--- a/src/Components/Tuesday/AddNewItemForm/AddNewItemForm.module.css
+++ b/src/Components/Tuesday/AddNewItemForm/AddNewItemForm.module.css
@@ -1,10 +1,20 @@
 
-.todoList_newTaskForm{
+.todoList_newTaskForm {
     display: flex;
-    justify-content: center;
-    margin: 50px 0;
+    width: 100%;
+    height: 30px;
+    margin-bottom: 10px;
 }
 
 .error {
     border-color: red;
 }
+
+.todoList_newTaskForm input {
+    width: 85%;
+}
+
+.add {
+    width: 15%;
+}
+
