--- a/src/Components/Wednesday/Wednesday.module.css
+++ b/src/Components/Wednesday/Wednesday.module.css
@@ -35,7 +35,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    /*  background: #fff;*/
+      background: #000;
 }
 
 .infoServer__text {
